--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
               run: chmod +x gradlew
 
             - name: Build using Gradle
-              run: ./gradlew build
+              run: ./gradlew setupCIWorkspace build
